fix button text vertical alignment for new font

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -41,16 +41,16 @@
 @emSize           : 12px;
 @pageFont         : 'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 @headerFont       : 'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-@fontSize         : 1.333333rem; /*16px*/
+@fontSize         : 1.3333rem; /*16px*/
 @lineHeight       : 2rem;
 @fontSmoothing    : false;
 
 @h1               : 6.83333rem; /*82px*/
-@h2               : 3.66667rem; /*44px*/
+@h2               : 3.6667rem; /*44px*/
 @h3               : 2.16667rem; /*26px*/
-@h4               : 1.75000rem; /*21px*/
-@h5               : 1.33333rem; /*16px*/
-@h6               : 0.91667rem; /*11px*/
+@h4               : 1.75rem; /*21px*/
+@h5               : 1.3333rem; /*16px*/
+@h6               : 0.916667rem; /*11px*/
 
 @h1Lineheight     : 8rem;
 @h2Lineheight     : 5rem;
@@ -62,7 +62,7 @@
 
 @miniSize        : @h6;
 @tinySize        : @h6;
-@smallSize       : 1.1666666667rem; /*14px*/
+@smallSize       : 1.16667rem; /*14px*/
 @mediumSize      : @h5;
 @largeSize       : @h4;
 @bigSize         : @h4;
@@ -136,7 +136,7 @@
     @iconSize : 4rem;
     @fontSize:  @mediumSize;
     @lineHeight: 2rem;
-    @padding : 1.0833333rem 1rem 0.9188888rem 1rem;
+    @padding : 1rem 1rem 1rem 1rem;
     @orPadding : 2rem;
     @orLineHeight : 3rem;
     @orHeight : 3rem;
